--- a/front/src/features/Facility/FacilityList.css
+++ b/front/src/features/Facility/FacilityList.css
@@ -146,7 +146,7 @@
 }
 
 .facility-selection-bar {
-  position: fixed;
+  position: sticky;
   bottom: 0;
   left: 0;
   right: 0;
@@ -157,6 +157,7 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 -2px 6px rgba(0,0,0,0.05);
+  z-index: 10
 }
 
 .facility-request-btn {
