상세페이지 수정

--- a/front/src/features/PublicFa/DetailPublicFa.css
+++ b/front/src/features/PublicFa/DetailPublicFa.css
@@ -58,6 +58,8 @@
 }
 .detail-table td {
   padding: 12px 0;
+  white-space: pre-line;
+  line-height: 1.1;
 }
 .detail-table td div {
   line-height: 1.6;
